fixed the text alignment for <h4>

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,6 @@ h1 {
 }
 
 h4{
-  text-align: center;
   color:#75cac3;
 }
 
